--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ footer a:hover { text-decoration:underline; }
   <!-- Contact -->
   <div class="card" id="contact">
     <h2>Contact Us</h2>
-    <p>📧 Email: <a href="mailto:ram96700@gmail.com">ram96700@gmail.com</a></p>
-    <p>📱 Phone: +91-9670097416</p>
+    <p>📧 Email: <a href="inforssanskrit@gmail.com">inforssanskrit@gmail.com</a></p>
+    <p>📱 Phone: +91-8922070245</p>
     <form id="contactForm">
       <input type="text" id="name" placeholder="Your Name" required>
       <input type="email" id="email" placeholder="Your Email" required>
@@ -255,3 +255,4 @@ document.getElementById("contactForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
